FullQa New/src/LeanData/objects/Round_Robin_Pool__c.object
<CustomObject>
    <fields>
        <fullName>Capping_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capping_Frequency__c</fullName>
        <label>Capping Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capping_Limit__c</fullName>
        <label>Capping Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capping_Reset__c</fullName>
        <label>Capping Reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Capping_Type__c</fullName>
        <label>Capping Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Order_Position__c</fullName>
        <label>Current Order Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Weight_Value__c</fullName>
        <label>Current Weight Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_Name__c</fullName>
        <label>Grouping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holidays__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Set</label>
        <referenceTo>Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Pool Holiday Set</relationshipLabel>
        <relationshipName>Pool_Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Next_OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pool_Type__c</fullName>
        <label>Pool Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Owner_Timezone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Owner&apos;s Timezone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighting_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weighting Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Set</label>
        <referenceTo>Round_Robin_Schedule_Setting__c</referenceTo>
        <relationshipLabel>Pool Working Hours</relationshipLabel>
        <relationshipName>Pool_Working_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Round Robin Pool</label>
    <nameField>
        <label>Round Robin Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>